--- a/package.json
+++ b/package.json
@@ -14,15 +14,21 @@
   "devDependencies": {
     "@biomejs/biome": "2.3.7",
     "@types/node": "^24.10.1",
+    "@types/pg": "^8.15.6",
+    "prisma": "^7.0.1",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3"
   },
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/swagger": "^9.6.1",
+    "@prisma/adapter-pg": "^7.0.1",
+    "@prisma/client": "^7.0.1",
     "@scalar/fastify-api-reference": "^1.40.0",
+    "dotenv": "^17.2.3",
     "fastify": "^5.6.2",
     "fastify-type-provider-zod": "^6.1.0",
+    "pg": "^8.16.3",
     "zod": "^4.1.13"
   }
 }
